// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeatureChangeContext should render acknowledgement for a change in auth 1`] = `
Object {
  "features": Array [
    Object {
      "action": undefined,
      "description": "Your new plan no longer allows for single sign-on and account-wide requirement of two-factor authentication.",
      "key": "auth",
      "label": "Authentication and Security",
      "value": true,
    },
  ],
  "isReady": true,
  "loading": false,
}
`;

exports[`FeatureChangeContext should render acknowledgement for a change in dedicated IPs 1`] = `
Object {
  "features": Array [
    Object {
      "action": undefined,
      "description": <div>
        <span>
          Your new plan doesn't include dedicated IPs. 
                    Your current IP(s) will be removed at the end of your current billing cycle.
        </span>
      </div>,
      "key": "dedicated_ip",
      "label": "Dedicated IPs",
      "value": true,
    },
  ],
  "isReady": true,
  "loading": false,
}
`;
